Initialisation de la branche master

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<ul>
 		    <li  class='en_cours'><i class="fas fa-home fa-lg fa-fw" style="color:#A3A0FB;"><!--Icon--></i> <a href="Accueil.html">Accueil</a></li>
 		    <li><i class="far fa-chart-bar fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Dashboard.html">Dashboard</a></li>	
-		    <li><i class="fas fa-envelope fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Messages.html">Page instable</a></li>	
+		    <li><i class="fas fa-envelope fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Messages.html">Messages</a></li>	
 		    <li><i class="fas fa-users fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Patients.html">Patients</a></li>	
 		    <li><i class="fas fa-calendar-alt fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Calendrier.html">Calendrier</a></li>	
 		    <li><i class="far fa-question-circle fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Assistance.html">Assistance</a></li>	
