--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
 	<div id='top-bar'>
 		<ul>
-			<li id="search-field"><i class="fas fa-search" style="color:#A5A4BF;"></i><input id="search-text" type="text" placeholder="Recherchez un patient, un test ou un message"></i></li>
+			<form>
+				<li id="search-field"><i class="fas fa-search" style="color:#A5A4BF;"></i><input id="search-text" type="text" placeholder="Recherchez un patient, un test ou un message"><input type="submit" hidden></i></li>
+			</form>
 			<li id="top-photo"><a href="#"> nom profil <img src="photo profil.jpg" title="profil" alt="photo"></a> </li>
 			<li id="top-assist"> <a href="Assistance.html"><i class="far fa-question-circle fa-lg fa-fw" style="color:#A5A4BF;" title="assistance"> </i></a> </li>
 			<li id="top-messagerie"><a href="Messages.html"><i class="fas fa-envelope fa-lg fa-fw" style="color:#A5A4BF;" title="messagerie"> </i></a> </li>
