--- a/admin/index.html
+++ b/admin/index.html
@@ -19,14 +19,13 @@
 
 	<nav> 
 		<ul>
-		    <li  class='en_cours'><i class="fas fa-home fa-lg fa-fw" style="color:#A3A0FB;"><!--Icon--></i> <a href="Accueil.html">Accueil</a></li>
-		    <li><i class="far fa-chart-bar fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Dashboard.html">Dashboard</a></li>	
-		    <li><i class="fas fa-envelope fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Messages.html">Messages</a></li>	
-		    <li><i class="fas fa-users fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Patients.html">Patients</a></li>	
-		    <li><i class="fas fa-calendar-alt fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Calendrier.html">Calendrier</a></li>	
-		    <li><i class="far fa-question-circle fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Assistance.html">Assistance</a></li>	
-		    <li><i class="fas fa-cogs fa-lg fa-fw" style="color:#A5A4BF;"> </i><a href="Parametres.html">Parametres</a></li>	
-
+		    <a href="Accueil.html"><li  class='en_cours'><i class="fas fa-home fa-lg fa-fw" style="color:#A3A0FB;"><!--Icon--></i><span>Accueil</span></li></a>
+		    <a href="Dashboard.html"><li><i class="far fa-chart-bar fa-lg fa-fw" style="color:#A5A4BF;"> </i><span>Dashboard</span></li></a>
+		    <a href="Messages.html"><li><i class="fas fa-envelope fa-lg fa-fw" style="color:#A5A4BF;"> </i><span>Messages</span></li></a>	
+		    <a href="Patients.html"><li><i class="fas fa-users fa-lg fa-fw" style="color:#A5A4BF;"> </i><span>Patients</span></li></a>
+		    <a href="Calendrier.html"><li><i class="fas fa-calendar-alt fa-lg fa-fw" style="color:#A5A4BF;"> </i><span>Calendrier</span></li></a>	
+		    <a href="Assistance.html"><li><i class="far fa-question-circle fa-lg fa-fw" style="color:#A5A4BF;"></i><span>Assistance</span></li></a>	
+		    <a href="Parametres.html"><li><i class="fas fa-cogs fa-lg fa-fw" style="color:#A5A4BF;"> </i><span>Parametres</span></li></a>
 		</ul>
 	</nav>
 
